# uchat

./: .gitignore  CMakeLists.txt  Makefile  README.md  cf_sound_record.c  client  client.c  server  server.c  test_serv.c  uchat  uchat.db  uchat.db~origin_client  uchat.db~server  uchat.db~server_0  uchat_server
client/: CMakeLists.txt  Login_and_reg.ui  Makefile  Readme.txt  a.out  client  client.c  client.h  login_btn_clicked_cb.c  main.c  msg_test.ui  mx_authentication_client.c  mx_gtk_window.c  mx_struct_initialization.c  reg_btn_clicked_cb.c  uchat
client/glade/: #Login_and_reg.ui#  Login_and_reg.ui  Login_and_reg.ui~  PointG.ui  PointG.ui~  Register.ui  msg_test.ui  msg_test.ui~  msg_test1.ui  msg_test1.ui~
client/inc/: client.h
client/libmx/inc/: libmx.h
client/libmx/src/: mx_bubble_sort_reverse.c  mx_del_char.c  mx_int_bubble_sort_reverse.c  mx_int_len.c  mx_memccpy.c  mx_print_strarr.c  mx_push_back.c  mx_substr.c
client/src/: a.out  cJSON_user.c  cf_play_vox.c  client.c  handler.c  main.c  msg_test.ui~  mx_authentication_client.c  mx_confirmation_of_registration.c  mx_create_user_profile.c  mx_login_or_register.c  mx_sending_messages.c  mx_struct_initialization.c  send_msg.c
client/src/client/: cJSON.c  client.c  mx_account_login_request.c  mx_add_message_request.c  mx_add_messages_request.c  mx_add_new_chat.c  mx_add_new_chat_request.c  mx_add_new_contact.c  mx_add_new_contact_request.c  mx_add_new_message.c  mx_add_new_messages.c  mx_authentication_client.c  mx_cache_dir_creator.c  mx_chat_event.c  mx_checking_friend_status.c  mx_client_menu.c  mx_confirmation_of_registration.c  mx_create_user_profile.c  mx_file_receiving.c  mx_file_size_measurement.c  mx_found_user_by_login.c  mx_found_users_by_substr.c  mx_get_file_path.c  mx_get_history_chat_request.c  mx_get_last_messages.c  mx_get_last_messages_request.c  mx_get_login.c  mx_get_user_pic_id.c  mx_get_voice_file_from_user.c  mx_get_voice_file_id.c  mx_hitsory_chat_messages.c  mx_last_messages.c  mx_login_or_register.c  mx_registration_or_login_request.c  mx_registration_request.c  mx_registration_request_new.c  mx_remove_notification_request.c  mx_save_user_pic_request.c  mx_save_voice_file_request.c  mx_send_voice_file_to_server.c  (+12 more)
client/src/handlers/: cf_add_vox.c  on_Vox_activate.c  on_add_user_clicked.c  on_chat_search_entry_changed.c  on_chat_send_btn_clicked.c  on_chat_switcher_select.c  on_contact_list_row_selected.c  on_edit_profile_avatar_clicked.c  on_edit_profile_back_clicked.c  on_edit_vax_back_btn_clicked.c  on_edit_vax_play_btn_clicked.c  on_friends_search_entry_changed.c  on_friends_search_entry_stop_search.c  on_friends_search_list_row_selected.c  on_log_login_btn_clicked.c  on_profile_edit_clicked.c  on_profile_edit_vox_clicked.c  on_reg_new_btn_clicked.c  on_remove_user_clicked.c  on_search_entry_changed.c  on_search_entry_focus_out.c  on_search_entry_match_select.c  on_settings_btn_clicked.c  on_vox_swap_btn_clicked.c
client/src/initializers/: gtk_window_initialization.c  mb_client_globals_initialization.c
client/src/listener/: mb_auth_event_check.c  mb_event_listener.c  mb_incoming_msg_check.c
client/src/unsorted/: gtk_window.c  load_history.c  login_btn_clicked_cb.c  login_button.c  mb_display_messge.c  mx_gtk_window.c  reg_button.c  send_msg.c  win_initialization.c
client/src/utilities/: mb_add_msg_to_history.c  mb_contact_list_add.c  mb_display_chat_with_contact.c  mb_display_msg.c  mb_get_uid_by_cid.c  mb_invalid_credentials_msg.c  mb_msg_buffer_add.c  mb_send_message.c
glade/: #Login_and_reg.ui#  Login_and_reg.ui  Login_and_reg.ui~  msg_test1.ui  style.css
inc/: client.h
libmx/inc/: libmx.h
libmx/src/: mx_int_search.c  mx_realloc.c
server/: Makefile  server  uchat.db  uchat_server
server/inc/: server.h  uchat_db.h
server/libmx/: Makefile
server/libmx/inc/: libmx.h
server/libmx/src/: mx_atoi.c  mx_atol.c  mx_bubble_sort.c  mx_charjoin.c  mx_list_size.c  mx_printchar_error.c  mx_push_penultimate.c  mx_read_line.c  mx_realloc.c  mx_strjoin_uls.c  mx_strndup.c  mx_substr.c
server/src/: hello_mongoc.c  main.c  mx_add_new_chat.c  mx_add_new_contact.c  mx_add_new_message.c  mx_check_disconect.c  mx_check_read.c  mx_database_stub.c  mx_db_change_login.c  mx_db_change_password.c  mx_db_check_login.c  mx_db_check_login_exists.c  mx_db_clear_history.c  mx_db_clear_notification.c  mx_db_close.c  mx_db_create_new_chat.c  mx_db_create_new_contact.c  mx_db_create_new_message.c  mx_db_delete_chat.c  mx_db_delete_contact.c  mx_db_get_chat_by_users.c  mx_db_get_chats.c  mx_db_get_chats_info.c  mx_db_get_contacts.c  mx_db_get_contacts_info.c  mx_db_get_filename.c  mx_db_get_last_messages.c  mx_db_get_login.c  mx_db_get_message.c  mx_db_get_profile.c  mx_db_get_user.c  mx_db_get_users_voices.c  mx_db_init.c  mx_db_insert_new_file.c  mx_db_insert_new_user.c  mx_db_insert_new_voice.c  mx_db_open.c  mx_db_search_logins_by_substr.c  mx_db_search_users_by_substr.c  mx_db_set_user_picture.c  (+28 more)
src/client/: client.c  mx_account_login_request.c  mx_authentication_client.c  mx_registration_request.c  mx_sending_messages.c  mx_view_contacts_list.c
src/unsorted/: login_btn_clicked_cb.c  mx_gtk_window.c  mx_struct_initialization.c  win_initialization.c
