cmake_minimum_required(VERSION 3.17)
project(uchat C)

set(CMAKE_C_STANDARD 11)

include_directories(client/inc)
include_directories(client/libmx/inc)
include_directories(server/inc)
include_directories(server/libmx/inc)

add_executable(uchat
        client/inc/cJSON.h
        client/inc/client.h
        client/libmx/inc/libmx.h
        client/libmx/src/mx_arr_rotate.c
        client/libmx/src/mx_atoi.c
        client/libmx/src/mx_atol.c
        client/libmx/src/mx_binary_search.c
        client/libmx/src/mx_bubble_sort.c
        client/libmx/src/mx_bubble_sort_reverse.c
        client/libmx/src/mx_charjoin.c
        client/libmx/src/mx_concat_words.c
        client/libmx/src/mx_copy_int_arr.c
        client/libmx/src/mx_count_substr.c
        client/libmx/src/mx_count_words.c
        client/libmx/src/mx_create_node.c
        client/libmx/src/mx_del_char.c
        client/libmx/src/mx_del_extra_spaces.c
        client/libmx/src/mx_del_strarr.c
        client/libmx/src/mx_factorial_iter.c
        client/libmx/src/mx_factorial_rec.c
        client/libmx/src/mx_file_to_str.c
        client/libmx/src/mx_foreach.c
        client/libmx/src/mx_get_char_index.c
        client/libmx/src/mx_get_substr_index.c
        client/libmx/src/mx_hex_to_nbr.c
        client/libmx/src/mx_insertion_sort.c
        client/libmx/src/mx_int_bubble_sort_reverse.c
        client/libmx/src/mx_int_len.c
        client/libmx/src/mx_int_search.c
        client/libmx/src/mx_is_odd.c
        client/libmx/src/mx_is_positive.c
        client/libmx/src/mx_isalpha.c
        client/libmx/src/mx_isdigit.c
        client/libmx/src/mx_islower.c
        client/libmx/src/mx_isspace.c
        client/libmx/src/mx_isupper.c
        client/libmx/src/mx_itoa.c
        client/libmx/src/mx_list_size.c
        client/libmx/src/mx_memccpy.c
        client/libmx/src/mx_memchr.c
        client/libmx/src/mx_memcmp.c
        client/libmx/src/mx_memcpy.c
        client/libmx/src/mx_memmem.c
        client/libmx/src/mx_memmove.c
        client/libmx/src/mx_memrchr.c
        client/libmx/src/mx_memset.c
        client/libmx/src/mx_nbr_to_hex.c
        client/libmx/src/mx_pop_back.c
        client/libmx/src/mx_pop_front.c
        client/libmx/src/mx_pow.c
        client/libmx/src/mx_print_strarr.c
        client/libmx/src/mx_print_unicode.c
        client/libmx/src/mx_printchar.c
        client/libmx/src/mx_printchar_error.c
        client/libmx/src/mx_printerr.c
        client/libmx/src/mx_printint.c
        client/libmx/src/mx_printstr.c
        client/libmx/src/mx_push_back.c
        client/libmx/src/mx_push_front.c
        client/libmx/src/mx_push_penultimate.c
        client/libmx/src/mx_quicksort.c
        client/libmx/src/mx_read_line.c
        client/libmx/src/mx_realloc.c
        client/libmx/src/mx_replace_substr.c
        client/libmx/src/mx_s_strlen.c
        client/libmx/src/mx_sort_list.c
        client/libmx/src/mx_sqrt.c
        client/libmx/src/mx_str_reverse.c
        client/libmx/src/mx_strcat.c
        client/libmx/src/mx_strchr.c
        client/libmx/src/mx_strcmp.c
        client/libmx/src/mx_strcpy.c
        client/libmx/src/mx_strdel.c
        client/libmx/src/mx_strdup.c
        client/libmx/src/mx_strjoin.c
        client/libmx/src/mx_strjoin_uls.c
        client/libmx/src/mx_strlen.c
        client/libmx/src/mx_strncmp.c
        client/libmx/src/mx_strncpy.c
        client/libmx/src/mx_strndup.c
        client/libmx/src/mx_strnew.c
        client/libmx/src/mx_strsplit.c
        client/libmx/src/mx_strstr.c
        client/libmx/src/mx_strtrim.c
        client/libmx/src/mx_substr.c
        client/libmx/src/mx_swap_char.c
        client/libmx/src/mx_tolower.c
        client/libmx/src/mx_toupper.c
        client/src/cJSON.c
        client/src/client.c
        client/src/mx_authentication_client.c
        client/src/mx_create_user_profile.c
        server/inc/cJSON.h
        server/inc/server.h
        server/libmx/inc/libmx.h
        server/libmx/src/mx_arr_rotate.c
        server/libmx/src/mx_atoi.c
        server/libmx/src/mx_atol.c
        server/libmx/src/mx_binary_search.c
        server/libmx/src/mx_bubble_sort.c
        server/libmx/src/mx_bubble_sort_reverse.c
        server/libmx/src/mx_charjoin.c
        server/libmx/src/mx_concat_words.c
        server/libmx/src/mx_copy_int_arr.c
        server/libmx/src/mx_count_substr.c
        server/libmx/src/mx_count_words.c
        server/libmx/src/mx_create_node.c
        server/libmx/src/mx_del_char.c
        server/libmx/src/mx_del_extra_spaces.c
        server/libmx/src/mx_del_strarr.c
        server/libmx/src/mx_factorial_iter.c
        server/libmx/src/mx_factorial_rec.c
        server/libmx/src/mx_file_to_str.c
        server/libmx/src/mx_foreach.c
        server/libmx/src/mx_get_char_index.c
        server/libmx/src/mx_get_substr_index.c
        server/libmx/src/mx_hex_to_nbr.c
        server/libmx/src/mx_insertion_sort.c
        server/libmx/src/mx_int_bubble_sort_reverse.c
        server/libmx/src/mx_int_len.c
        server/libmx/src/mx_int_search.c
        server/libmx/src/mx_is_odd.c
        server/libmx/src/mx_is_positive.c
        server/libmx/src/mx_isalpha.c
        server/libmx/src/mx_isdigit.c
        server/libmx/src/mx_islower.c
        server/libmx/src/mx_isspace.c
        server/libmx/src/mx_isupper.c
        server/libmx/src/mx_itoa.c
        server/libmx/src/mx_list_size.c
        server/libmx/src/mx_memccpy.c
        server/libmx/src/mx_memchr.c
        server/libmx/src/mx_memcmp.c
        server/libmx/src/mx_memcpy.c
        server/libmx/src/mx_memmem.c
        server/libmx/src/mx_memmove.c
        server/libmx/src/mx_memrchr.c
        server/libmx/src/mx_memset.c
        server/libmx/src/mx_nbr_to_hex.c
        server/libmx/src/mx_pop_back.c
        server/libmx/src/mx_pop_front.c
        server/libmx/src/mx_pow.c
        server/libmx/src/mx_print_strarr.c
        server/libmx/src/mx_print_unicode.c
        server/libmx/src/mx_printchar.c
        server/libmx/src/mx_printchar_error.c
        server/libmx/src/mx_printerr.c
        server/libmx/src/mx_printint.c
        server/libmx/src/mx_printstr.c
        server/libmx/src/mx_push_back.c
        server/libmx/src/mx_push_front.c
        server/libmx/src/mx_push_penultimate.c
        server/libmx/src/mx_quicksort.c
        server/libmx/src/mx_read_line.c
        server/libmx/src/mx_realloc.c
        server/libmx/src/mx_replace_substr.c
        server/libmx/src/mx_s_strlen.c
        server/libmx/src/mx_sort_list.c
        server/libmx/src/mx_sqrt.c
        server/libmx/src/mx_str_reverse.c
        server/libmx/src/mx_strcat.c
        server/libmx/src/mx_strchr.c
        server/libmx/src/mx_strcmp.c
        server/libmx/src/mx_strcpy.c
        server/libmx/src/mx_strdel.c
        server/libmx/src/mx_strdup.c
        server/libmx/src/mx_strjoin.c
        server/libmx/src/mx_strjoin_uls.c
        server/libmx/src/mx_strlen.c
        server/libmx/src/mx_strncmp.c
        server/libmx/src/mx_strncpy.c
        server/libmx/src/mx_strndup.c
        server/libmx/src/mx_strnew.c
        server/libmx/src/mx_strsplit.c
        server/libmx/src/mx_strstr.c
        server/libmx/src/mx_strtrim.c
        server/libmx/src/mx_substr.c
        server/libmx/src/mx_swap_char.c
        server/libmx/src/mx_tolower.c
        server/libmx/src/mx_toupper.c
        server/src/cJSON.c
        server/src/mx_check_disconect.c
        server/src/mx_check_read.c
        server/src/mx_database_stub.c
        server/src/mx_login_and_pass_verification.c
        server/src/mx_read_server.c
        server/src/server.c
        test_serv.c)
